--- a/FE-HotelManager/package.json
+++ b/FE-HotelManager/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
+    "swiper": "^11.1.15",
+    "typical": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
